frontend/core/src/main/webapp/static/less/layout.less
/* ... */
// 1. Text element inside .group-mixed--middle has line-height of 16px (@grid-vertical-small).
//    Set padding-top and bottom to make .group-mixed.small 30px high.
//    TODO: vertical padding in .group-mixed--middle + negative vertical margin in & > a
// 2. Set smaller height for link inside .group-mixed--right.
// 3. Align with text in .group-mixed--middle.
//    TODO: vertical padding in .group-mixed--middle + negative vertical margin in & > a
.group-mixed.small {
  .group-mixed--middle > a.link-menu-small {
    padding-top: 4px;     // [1]
    padding-bottom: 4px;  // [1]
    & > span.text-navigation-menu-small {
      line-height: @grid-vertical-small;
    }
  }
  .group-mixed--right > a {
    height: @grid-vertical-medium;       // [1]
    line-height: @grid-vertical-medium;  // [1]
    & > span.icon-star.small {
      line-height: @grid-vertical-small;
      padding-top: 4px - 1px;
      padding-bottom: 4px + 1px;
    }
  }
}

// FIXME: move (overrides.less)
// 1. Set height for clickable icon inside .group-mixed--left.
// 2. Center vertically. Supports single line, multiline and clamped text.
// 3. Make sure clamped and unclamped span inside a tag has the same height with display: block.
.group-mixed.vertically-centered {
  .group-mixed--left {
    & > a > span {
      height: @grid-vertical; // [1]
    }
  }
  .group-mixed--middle {
    padding-top: @padding-vertically-centered;    // [2]
    padding-bottom: @padding-vertically-centered; // [2]
    & > span {
      display: block; // [3]
    }
  }
}

// FIXME: rename and replace .row-form
// 1. Center vertically. Supports single line, multiline and clamped text.
// 2. Expand link element.
// 3. Make sure clamped and unclamped span inside a tag has the same height with display: block.
//    NOTE: Height of clamped span may vary depending on font, platform and browser. Tested with iPhone 5 and
//          iOS 8.
//          Use span[clamp="2"] if needed to target clamped span.
.row-vertically-centered {
  .row();
  & > a {
    padding-top: @padding-vertically-centered;    // [1]
    padding-bottom: @padding-vertically-centered; // [1]
    display: block; // [2]
    & > span {
      display: block; // [3]
    }
  }
}

// 1. Apply vertical center directly into container when used as a textarea wrapper.
.row-vertically-centered.with-textarea {
  padding-top: @padding-vertically-centered;    // [1]
  padding-bottom: @padding-vertically-centered; // [1]
}

// Heading is long, multiple lines need smaller spacing, so the method above does not work
// 1. Match 88 pixels with this, to make this be the same as the above for consistent look and feel
.group-heading {
  padding-top: @grid-vertical-half + 3px; // [1]
  line-height: @grid-vertical;
  padding-bottom: @grid-vertical-half + 3px; // [1]
}

.height-small .group-heading:not(.justified):not(.instruction){
  padding-top: 5px;
  padding-bottom: 10px;
  font-size: @size-font-not-so-large;
}

// FIXME: refactor or move (overrides.less)
@margin-top-heading-justified: -11px;
// 1. Justify whitespace between toolbar and content
.group-heading.justified {
  margin-top: @margin-top-heading-justified; // [1]
}

// FIXME: refactor or move (overrides.less)
.group-heading.long {
  font-size: @size-font-not-so-large;
  margin-bottom: 0;
}

// FIXME: refactor or move (overrides.less)
.group-heading.instruction {
  margin-top: @grid-vertical * 1.5;
  padding-top: 2vh;
}

// FIXME: refactor or move (overrides.less)
// iPhone 4s, less top margin for instruction headings
.height-small .group-heading.instruction {
  margin-top: @grid-vertical-half;
}

.group-heading .highlighted {
  color: @color-text-highlighted;
}

/*
`.group-error` groups together multiple error messages.
*/
.group-error {
  position: absolute;
  margin-top: -10px;
  line-height: @grid-vertical-small;
}

// FIXME: refactor or move (overrides.less)
.group-error.height-large {
  margin-top: 0;
}


/*
`.group-symmetrical` groups together up to three adjacent elements
symmetrically so that `.group-symmetrical-middle` is always in the
center.

Not compatible with `.row` so we need to apply padding-left and -right inside.

*/

@max-width-group-symmetrical-middle: 70px;

.group-symmetrical--left, .group-symmetrical--right {
  display: table-cell;
  vertical-align: middle;
}

.group-symmetrical {
  height: @grid-vertical;
  line-height: @grid-vertical;
}

@group-symmetrical-edge-padding-to-center: 10px;
// 1. Inherit varying container height.
.group-symmetrical--left {
  height: inherit;  // [1]
  text-align: left;
  float: left;
  padding-left: @grid-horizontal;
  padding-right: @group-symmetrical-edge-padding-to-center;
}

// 1. Vertically and horizontally align the content of the middle element.
// Works with <a><span></span></a> structure. Unfortunately a <button> element does not work here
// because that buttons don't work with display:table*. Bootstrap has a similar solution:
// http://getbootstrap.com/components/#input-groups-buttons
.group-symmetrical--middle {
  position: absolute;
  .center-horizontally-absolute;
  max-width: @max-width-group-symmetrical-middle;
  height: inherit;

  & > a {                        // [1]
    display: table;
    width: 100%;
    height: inherit;
    & > span,
    & > div {                   // [1]
      text-align: center;
      height: inherit;
      display: table-cell;
      vertical-align: middle;
    }
  }
}

// 1. Inherit varying container height.
.group-symmetrical--right {
  height: inherit;  // [1]
  float: right;
  padding-right: @grid-horizontal;
  padding-left: @group-symmetrical-edge-padding-to-center;
}

@margin-top-heading: 9px;

// 1. Set margin-top for large .group-symmetrical to add space on top of it.
//    FIXME:  Only needed in @media (max-height: @height-landscape-max)
.group-symmetrical.height-large {
  margin-top: @margin-top-heading;  // [1]
}

.group-symmetrical--middle.width-large {
  max-width: @max-width-group-symmetrical-middle * 2;
}
/* ... */

